# DynamicBot

./: pyproject.toml
bot/: autobot.py
web/: sign.js
