[project]
name = "autobot"
version = "0.1.0"
description = "Automated staking bot for Bittensor."
requires-python = ">=3.11"
authors = [
    { name = "Your Name", email = "your.email@example.com" }  # TODO: Replace with your actual name and email.
]
dependencies = [
    "bittensor",
    "PyYAML",
    "requests",
    "rich",
    "tenacity"
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta" 